# uc80

./: .gitignore  CLAUDE.md  CODEGEN_MIGRATION.md  README.md  SIZE_COMPARISON.txt  WIP.md  WIP.txt  pyproject.toml  run_ctests.py  run_fujitsu.py  run_fujitsu_tests.py  run_gcc_torture.py  run_sdcc.py  todo.txt
.github/workflows/: publish.yml  pytest.yml
doc/: z88dk_um80_syntax_spec.md
docs/: ANSI_C_COMPLIANCE.md  FLOAT_STATUS.md  configurable_int_sizes.md  implementation_plan.md  size_analysis_0053_0456.md
examples/: hello.c  hello.mac  hello2.mac  hello3.c  hello3.mac  manual_hello.mac  putc.c  putc.mac  test_arith.mac  test_break.mac  test_compound.mac  test_cseg.mac  test_debug.mac  test_emptystr.mac  test_enum.mac  test_exact.mac  test_exact2.mac  test_fileio2.c  test_fileio3.c  test_fileio4.c  test_fprintf.c  test_global.mac  test_inc.mac  test_incdec.mac  test_index.mac  test_long.c  test_long.mac  test_long_simple.mac  test_loop.mac  test_memstr.c  test_minimal.mac  test_noix.mac  test_preproc.c  test_preproc.mac  test_putchar.mac  test_setjmp.mac  test_sprintf.c  test_static.mac  test_stdlib.c  test_str.mac  (+11 more)
lib/: build_libs.py  crt0.mac  float48.mac  libc.mac  runtime.mac  split_libc.py  split_runtime.py
lib/include/: assert.h  complex.h  ctype.h  errno.h  fenv.h  float.h  inttypes.h  limits.h  locale.h  math.h  memory.h  signal.h  stdalign.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  stdnoreturn.h  string.h  test.h  tgmath.h  threads.h  time.h  wchar.h
lib/lc/: lc_acos.mac  lc_asin.mac  lc_asinh.mac  lc_assert.mac  lc_atan.mac  lc_atan2.mac  lc_atanh.mac  lc_atoi.mac  lc_atomic.mac  lc_complex.mac  lc_cos.mac  lc_cosh.mac  lc_ctype.mac  lc_data.mac  lc_exp.mac  lc_exp2.mac  lc_file.mac  lc_floor.mac  lc_fmod.mac  lc_frexp.mac  lc_gets.mac  lc_hypot.mac  lc_log.mac  lc_log10.mac  lc_log2.mac  lc_logb.mac  lc_math.mac  lc_modf.mac  lc_nan.mac  lc_pow.mac  lc_printf_all.mac  lc_printf_c.mac  lc_printf_core.mac  lc_printf_d.mac  lc_printf_lld.mac  lc_printf_llu.mac  lc_printf_lu.mac  lc_printf_lx.mac  lc_printf_o.mac  lc_printf_u.mac  (+17 more)
lib/math48/: README.md  am48__dtoa_base10.mac  am48__dtoa_base16.mac  am48__dtoa_digits.mac  am48__dtoa_sgnabs.mac  am48_acos.mac  am48_atan.mac  am48_atanh.mac  am48_cbrt.mac  am48_cos.mac  am48_dcmp.mac  am48_dconst_1_3.mac  am48_dconst_e.mac  am48_dconst_sqr2_2.mac  am48_ddiv.mac  am48_ddup.mac  am48_dequate.mac  am48_derror_edom_infc.mac  am48_derror_erange_infc.mac  am48_derror_erange_intc.mac  am48_derror_erange_longc.mac  am48_derror_erange_longlongc.mac  am48_derror_nanc.mac  am48_derror_znc.mac  am48_dfix16u.mac  am48_dfix32.mac  am48_dfix64u.mac  am48_dfix8.mac  am48_dge.mac  am48_dge_s.mac  am48_dgt_s.mac  am48_dinv.mac  am48_dle_s.mac  am48_dlt.mac  (+56 more)
src/: __init__.py  asm_dce.py  ast.py  ast_optimizer.py  codegen.py  lexer.py  main.py  parser.py  preprocessor.py  runtime.py  tokens.py
tests/: __init__.py  test_asm_dce.py  test_codegen.py  test_headers_int_sizes.py  test_integration.py  test_lexer.py  test_parser.py  test_runtime.py  test_type_config_codegen.py
(+195 files in other folders)
